# Particles

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Particle/: BarnesHut.cpp  BarnesHut.h  BlueWorld.h  Camera.h  Grid.h  OctTree.h  Particle.h  Picture.h  Simulation.h  Tensor.h  Vector.h  main.cpp  utils.h
libs/SFML-2.5.1/include/SFML/Graphics/: RenderWindow.hpp
libs/SFML-2.5.1/include/SFML/Window/: Sensor.hpp
libs/SFML-2.5.1/src/SFML/Window/: GlContext.cpp
libs/SFML-2.5.1/src/SFML/Window/Android/: SensorImpl.cpp
libs/SFML-2.5.1/src/SFML/Window/Unix/: GlxContext.cpp
